# polymesh-dart

./: .gitignore  .instructions.md  Cargo.toml  DART_TXN_FLOWS.md  Math.md  README.md  rustc-ice-2026-02-02T05_05_10-41530.txt
.github/workflows/: dart-bp-tests.yml  deploy-docs.yml
benches/: discrete_log.rs  fee_payments.rs  leg_decrypt.rs  proof_benchmark.rs
dart-bp/: Cargo.toml  Makefile  README.md  benchmark_results.md
dart-bp/benches/: affirmation_proofs.rs  affirmation_proofs_new.rs  fee_account_proofs.rs  fee_account_proofs_new.rs  settlement_proofs.rs  settlement_proofs_new.rs
dart-bp/docs/: 1.md  2.md  3.md  4.md  5.md  6.md  Cargo.toml  Gemfile  README.md  _config.yml  appendix.md  build-pdf.sh  index.md  katex-header.html  katex-test.html  lib.rs  mathjax-header.html  toc.md
dart-bp/docs/_layouts/: default.html
dart-bp/src/: account.rs  account_new.rs  account_old.rs  account_registration.rs  auth_proofs.rs  discrete_log.rs  eq_across_groups.rs  error.rs  fee_account.rs  fee_account_new.rs  fee_account_old.rs  key_distribution.rs  keys.rs  leg.rs  leg_alt.rs  leg_new.rs  leg_old.rs  lib.rs  macros.rs  util.rs  utils_new.rs
dart-bp/src/account/: common.rs  common_new.rs  common_old.rs  mint.rs  mint_new.rs  mint_old.rs  mod.rs  mod_new.rs  mod_old.rs  pob.rs  portfolio_move.rs  state.rs  state_transition.rs  state_transition_multi.rs  state_transition_multi_new.rs  state_transition_multi_old.rs  state_transition_new.rs  state_transition_old.rs  tests.rs  tests_new_ct.rs  tests_old.rs  transparent.rs  transparent_new.rs  transparent_old.rs
dart-bp/src/account/common/: balance.rs  leg_link.rs  mod.rs  verifier.rs
dart-bp/src/auth_proofs/: account.rs  fee_account.rs  helpers.rs  mod.rs  transparent.rs
dart-bp/src/leg/: leg_proof.rs  mediator.rs  mod.rs  proofs.rs  public_asset_leg_proof.rs  settlement_proof.rs  tests.rs
dart-bp/src/old/: account.rs  keys.rs  leg.rs  mod.rs
dart-bp/src/poseidon_impls/: fp_var.rs  mod.rs  poseidon.rs  poseidon_2.rs  poseidon_ark.rs  poseidon_old.rs  poseidon_optimz.rs  utils.rs
dart-bp/src/poseidon_impls/poseidon_2/: mod.rs  params.rs
dart-common/: Cargo.toml
dart-common/src/: lib.rs
dart-halo2/: Cargo.toml
dart-halo2/src/: account.rs  account_registration.rs  error.rs  keys.rs  leg.rs  lib.rs  poseidon.rs  types_and_constants.rs  utils.rs
dart-halo2/src/circuits/: affirmation.rs  leg.rs  mint.rs  mod.rs  old_affirmation.rs  old_mint.rs  registration.rs
dart-testing-cli/: Cargo.toml  reinit_db_and_run_testing.sh  simple_setup.sh
dart-testing-cli/src/: lib.rs  main.rs  sqlite_curve_tree.rs
dart-verifier/: Cargo.toml
dart-verifier/src/: main.rs
sandboxed/: Cargo.toml  build_polkavm_32bit.sh  build_polkavm_64bit.sh  rust-toolchain.toml
sandboxed/src/: lib.rs  main.rs
src/: bp.rs  curve_tree_storage.rs  error.rs  lib.rs  serde_impl.rs  storage_curve_tree.rs
src/bp/: account.rs  account_reg_split.rs  affirmation_proofs.rs  affirmation_split.rs  asset.rs  auth_proofs.rs  batched.rs  curve_tree.rs  encode.rs  fee.rs  fee_split.rs  key_distribution_proof.rs  keys.rs  leg.rs  mint_split.rs  mod.rs  split_types.rs  sqlx.rs  sqlx_impl.rs
src/bp/leg/: instant.rs  proofs.rs
src/curve_tree/: async_tree.rs  backends.rs  common.rs  mod.rs  storage.rs  sync_tree.rs
tests/: account_registration_tests.rs  curve_tree_tests.rs  lean_curve_tree_tests.rs  sender_affirmation_verify_test.rs  simple_mint_and_transfer.rs
tests/common/: mod.rs
tests/serialized_objects_test/: account.rs  constants.rs  fee.rs  leg.rs  main.rs  split.rs  utils.rs
wasm-test/: Cargo.toml  README.md  rebuild-wasi-app.sh  rust-toolchain.toml
wasm-test/src/: lib.rs  sandbox.rs  wasi-module.wasm
