[package]
name = "polymesh-dart"
version = "0.1.0"
edition = "2024"
description = "Polymesh DART assets."
authors = [ "Polymesh Association" ]
license-file = "LICENSE.pdf"

[workspace]
members = [
    "dart-bp",
    "dart-common",
]

[patch.crates-io]
# Curve tree dependencies
bulletproofs = { path = "../curve-trees/bulletproofs" }
curve_tree_relations = { package = "relations", path = "../curve-trees/relations" }
# If want to pull code for curve-trees from git, comment above 2 relations and uncomment below 2
#bulletproofs = { git = "https://github.com/PolymeshAssociation/curve-trees", branch = "polymesh" }
#curve_tree_relations = { package = "relations", git = "https://github.com/PolymeshAssociation/curve-trees", branch = "polymesh" }

dock_crypto_utils = { path = "../crypto/utils" }
schnorr_pok = { path = "../crypto/schnorr_pok" }

#dock_crypto_utils = { git = "https://github.com/PolymeshAssociation/crypto" }
#schnorr_pok = { git = "https://github.com/PolymeshAssociation/crypto" }

[workspace.dependencies]
polymesh-dart-bp = { path = "./dart-bp", version = "0.1.0", default-features = false }
polymesh-dart-common = { path = "./dart-common", version = "0.1.0", default-features = false }

# Common
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
thiserror = { version = "2", default-features = false }
log = { version = "0.4.27", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

# Substrate/SCALE deps.
bounded-collections = { version = "0.1.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
scale-info = { version = "2.0", default-features = false }

ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
digest = { version = "0.10.7", default-features = false }
blake2 = { version = "0.10", default-features = false }
rayon = { version = "1.5.3", default-features = false }

dock_crypto_utils = { version = "0.22.0", default-features = false }
schnorr_pok = { version = "0.22.0", default-features = false }

# Curve tree dependencies
bulletproofs = { version = "2.0.0", default-features = false }
curve_tree_relations = { version = "0.1.0", package = "relations", default-features = false }

# Dev dependencies
anyhow = { version = "1.0.98", default-features = false }
test-log = { version = "0.2.17", default-features = false }
criterion = { version = "0.3", default-features = false }
ark-pallas = { version = "0.4", default-features = false }
ark-vesta = { version = "0.4", default-features = false }
ark-secp256k1 = { version = "0.4", default-features = false }
ark-secq256k1 = { version = "0.4", default-features = false }

[dependencies]
polymesh-dart-bp = { workspace = true, default-features = false, optional = true }
polymesh-dart-common = { workspace = true, default-features = false }

# common dependencies
rand_core = { workspace = true, default-features = false }
rand_chacha = { workspace = true, default-features = false }
digest = { workspace = true, default-features = false }
blake2 = { workspace = true, default-features = false }
rayon = { workspace = true, optional = true, default-features = false }
lazy_static = { workspace = true, default-features = false, optional = true }
thiserror = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }

# Substrate/SCALE deps.
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
bounded-collections = { workspace = true, default-features = false }

# dart-bp dependencies
ark-ff = { workspace = true, default-features = false, optional = true }
ark-ec = { workspace = true, default-features = false, optional = true }
ark-serialize = { workspace = true, default-features = false, optional = true }
ark-std = { workspace = true, default-features = false, optional = true }
dock_crypto_utils = { workspace = true, default-features = false, optional = true }
schnorr_pok = { workspace = true, default-features = false, optional = true }
ark-pallas = { workspace = true, default-features = false, optional = true }
ark-vesta = { workspace = true, default-features = false, optional = true }
ark-secp256k1 = { workspace = true, default-features = false, optional = true }
ark-secq256k1 = { workspace = true, default-features = false, optional = true }

# Curve tree BP dependencies
bulletproofs = { workspace = true, default-features = false, optional = true }
curve_tree_relations = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
test-log = { workspace = true }
rand = { workspace = true }

[features]
default = ["std", "asm", "parallel", "backend_bp", "async_tree"]

async_tree = []

backend_bp = [
    "polymesh-dart-bp",
    "ark-ff",
    "ark-ec",
    "ark-serialize",
    "ark-std",
    "dock_crypto_utils",
    "schnorr_pok",
    "bulletproofs",
    "curve_tree_relations",
    "ark-pallas/curve",
    "ark-vesta",
    "ark-secp256k1",
    "ark-secq256k1",
]

no_std = []

std = [
    "log/std",
    "hex/std",
    "lazy_static",
    "polymesh-dart-bp?/std",
    "thiserror/std",
    "bounded-collections/std",
    "codec/std",
    "ark-pallas?/std",
    "ark-vesta?/std",
]

asm = ["polymesh-dart-bp?/asm"]
parallel = ["polymesh-dart-bp?/parallel"]
