[package]
name = "polymesh-dart"
version = "0.1.0"
edition = "2024"
description = "Polymesh DART assets."
authors = ["Polymesh Association"]
license-file = "LICENSE.pdf"

[workspace]
members = ["dart-bp", "dart-testing-cli", "dart-common", "dart-halo2"]

[patch.crates-io]
# Curve tree dependencies
bulletproofs = { path = "../curve-trees/bulletproofs" }
curve_tree_relations = { package = "relations", path = "../curve-trees/relations" }
# If want to pull code for curve-trees from git, comment above 2 relations and uncomment below 2
#bulletproofs = { git = "https://github.com/PolymeshAssociation/curve-trees", branch = "polymesh" }
#curve_tree_relations = { package = "relations", git = "https://github.com/PolymeshAssociation/curve-trees", branch = "polymesh" }

#dock_crypto_utils = { path = "../crypto/utils" }
#schnorr_pok = { path = "../crypto/schnorr_pok" }

dock_crypto_utils = { git = "https://github.com/PolymeshAssociation/crypto" }
schnorr_pok = { git = "https://github.com/PolymeshAssociation/crypto" }
#equality_across_groups = { git = "https://github.com/PolymeshAssociation/crypto" }

[workspace.dependencies]
polymesh-dart = { path = "./", version = "0.1.0", default-features = false }
polymesh-dart-bp = { path = "./dart-bp", version = "0.1.0", default-features = false }
polymesh-dart-common = { path = "./dart-common", version = "0.1.0", default-features = false }

# Common
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
thiserror = { version = "2", default-features = false }
log = { version = "0.4.27", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

# serde support
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_arrays = { version = "0.2", default-features = false }

# Substrate/SCALE deps.
bounded-collections = { version = "0.1.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
scale-info = { version = "2.0", default-features = false }

ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "crh",
    "r1cs",
] }
ark-relations = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
digest = { version = "0.10.7", default-features = false }
blake2 = { version = "0.10", default-features = false }
rayon = { version = "1.5.3", default-features = false }

dock_crypto_utils = { version = "0.22.0", default-features = false }
schnorr_pok = { version = "0.22.0", default-features = false }
#equality_across_groups = { version = "0.2.0", default-features = false }

# Curve tree dependencies
bulletproofs = { version = "2.0.0", default-features = false }
curve_tree_relations = { version = "0.1.0", package = "relations", default-features = false }

# Dev dependencies
anyhow = { version = "1.0.98", default-features = false }
test-log = { version = "0.2.17", default-features = false }
criterion = { version = "0.3", default-features = false }
ark-pallas = { version = "0.4", default-features = false }
ark-vesta = { version = "0.4", default-features = false }
ark-secp256k1 = { version = "0.4", default-features = false }
ark-secq256k1 = { version = "0.4", default-features = false }

[dependencies]
polymesh-dart-bp = { workspace = true, default-features = false, optional = true }
polymesh-dart-common = { workspace = true, default-features = false }

# common dependencies
rand_core = { workspace = true, default-features = false }
rand_chacha = { workspace = true, default-features = false }
digest = { workspace = true, default-features = false }
blake2 = { workspace = true, default-features = false }
rayon = { workspace = true, optional = true, default-features = false }
lazy_static = { workspace = true, default-features = false, optional = true }
thiserror = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
zeroize = { workspace = true, default-features = false }

# Substrate/SCALE deps.
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
bounded-collections = { workspace = true, default-features = false }

# serde support
serde = { workspace = true, default-features = false, features = [
    "derive",
], optional = true }
serde_json = { workspace = true, default-features = false, optional = true }
serde_arrays = { workspace = true, default-features = false, optional = true }

# SQLx support.
sqlx = { version = "0.8", default-features = false, features = [
    "any",
    "macros",
], optional = true }
sqlx-core = { version = "0.8", default-features = false, features = [
    "any",
], optional = true }

# REST API server support (Schema).
utoipa = { version = "5.4", optional = true, default-features = false, features = [
    "macros",
] }

# dart-bp dependencies
ark-ff = { workspace = true, default-features = false, optional = true }
ark-ec = { workspace = true, default-features = false, optional = true }
ark-serialize = { workspace = true, default-features = false, optional = true }
ark-std = { workspace = true, default-features = false, optional = true }
dock_crypto_utils = { workspace = true, default-features = false, optional = true }
schnorr_pok = { workspace = true, default-features = false, optional = true }
ark-pallas = { workspace = true, default-features = false, optional = true }
ark-vesta = { workspace = true, default-features = false, optional = true }
ark-secp256k1 = { workspace = true, default-features = false, optional = true }
ark-secq256k1 = { workspace = true, default-features = false, optional = true }

# Curve tree BP dependencies
bulletproofs = { workspace = true, default-features = false, optional = true }
curve_tree_relations = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = { workspace = true }
test-log = { workspace = true, features = ["default"] }
rand = { workspace = true }

[[bench]]
name = "proof_benchmark"
harness = false

[features]
default = [
    "std",
    "asm",
    "parallel",
    "backend_bp",
    "async_tree",
    "serde",
    "utoipa",
    "sqlx",
]

serde = ["dep:serde", "serde_json", "serde_arrays"]

utoipa = ["dep:utoipa", "serde"]

sqlx = ["dep:sqlx", "sqlx-core"]

async_tree = []

backend_bp = [
    "polymesh-dart-bp",
    "ark-ff",
    "ark-ec",
    "ark-serialize",
    "ark-std",
    "dock_crypto_utils",
    "schnorr_pok",
    "bulletproofs",
    "curve_tree_relations",
    "ark-pallas/curve",
    "ark-vesta",
    "ark-secp256k1",
    "ark-secq256k1",
]

no_std = ["alloc"]

alloc = [
    "serde?/alloc",
    "serde_json?/alloc",
    "serde_arrays?/alloc",
]

std = [
    "log/std",
    "hex/std",
    "serde?/std",
    "serde_json?/std",
    "lazy_static",
    "polymesh-dart-bp?/std",
    "thiserror/std",
    "bounded-collections/std",
    "codec/std",
    "ark-pallas?/std",
    "ark-vesta?/std",
    "zeroize/std",
]

asm = ["polymesh-dart-bp?/asm"]
parallel = ["polymesh-dart-bp?/parallel"]
