[package]
name = "polymesh-dart-bp"
version = "0.1.0"
edition = "2024"

[dependencies]
polymesh-dart-common = { workspace = true, default-features = false }

rand = { workspace = true, default-features = false }
rand_core = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
digest = { workspace = true, default-features = false }
blake2 = { workspace = true, default-features = false }
rayon = { workspace = true, default-features = false, optional = true }
thiserror = { workspace = true, default-features = false }
zeroize = { workspace = true, default-features = false }

ark-ff = { workspace = true, default-features = false }
ark-ec = { workspace = true, default-features = false }
ark-serialize = { workspace = true, default-features = false }
ark-std = { workspace = true, default-features = false }
dock_crypto_utils = { workspace = true, default-features = false }
schnorr_pok = { workspace = true, default-features = false }

# Curve tree dependencies
bulletproofs = { workspace = true, default-features = false }
curve_tree_relations = { workspace = true, default-features = false }

# Poseidon dependencies
#arkworks-r1cs-gadgets = {git = "https://github.com/tangle-network/zero-knowledge-gadgets", default-features = false}
ark-crypto-primitives = { workspace = true, default-features = false, features = [
	"crh",
	"r1cs",
] }
ark-relations = { workspace = true, default-features = false }
ark-r1cs-std = { workspace = true, default-features = false }
ark-pallas = { workspace = true, default-features = false, features = ["curve"] }
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
test-log = { workspace = true }
criterion = { workspace = true }
ark-vesta = { workspace = true }
ark-secp256k1 = { workspace = true }
ark-secq256k1 = { workspace = true }

[[bench]]
name = "affirmation_proofs"
harness = false

[features]
default = ["std", "asm", "parallel"]

no_std = []

std = [
	"bulletproofs/std",
	"curve_tree_relations/std",
	"ark-std/std",
	"thiserror/std",
	#	"arkworks-r1cs-gadgets/std",
	"ark-crypto-primitives/std",
	"ark-relations/std",
	"ark-r1cs-std/std",
	"zeroize/std",
	#	"equality_across_groups/std",
	"ark-pallas/std",
	"hex/std"
]

asm = ["ark-ff/asm", "bulletproofs/asm", "curve_tree_relations/asm"]
parallel = [
	"rayon",
	"ark-ec/parallel",
	"ark-ff/parallel",
	"ark-std/parallel",
	"bulletproofs/parallel",
	"curve_tree_relations/parallel",
	"dock_crypto_utils/parallel",
	"schnorr_pok/parallel",
	#	"arkworks-r1cs-gadgets/parallel",
	"ark-crypto-primitives/parallel",
	"ark-r1cs-std/parallel",
]

# To ignore input sanitation checks run by prover. Useful when running certain tests for failure cases
ignore_prover_input_sanitation = []
