[package]
name = "polymesh-dart-sandboxed"
version = "0.1.0"
edition = "2021"

[lib]
name = "polymesh_dart_sandboxed"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "test_sandboxed"
path = "src/main.rs"

[dependencies]
polymesh-dart = { workspace = true, default-features = false, features = [
    "backend_bp", "verify_api", "scale-info"
] }
polymesh-dart-bp = { workspace = true, default-features = false }
polymesh-dart-common = { workspace = true, default-features = false }

# dart-bp dependencies
ark-ff = { workspace = true, default-features = false }
ark-ec = { workspace = true, default-features = false }
ark-serialize = { workspace = true, default-features = false }
ark-std = { workspace = true, default-features = false }
dock_crypto_utils = { workspace = true, default-features = false }
schnorr_pok = { workspace = true, default-features = false }
ark-pallas = { workspace = true, default-features = false }
ark-vesta = { workspace = true, default-features = false }

# Curve tree BP dependencies
bulletproofs = { workspace = true, default-features = false }
curve_tree_relations = { workspace = true, default-features = false }
ark-ec-divisors = { workspace = true, default-features = false, features = ["pallas", "vesta"] }
ark-dlog-gadget = { workspace = true, default-features = false, features = ["pallas", "vesta"] }

# common dependencies
rand_core = { workspace = true, default-features = false }
rand_chacha = { workspace = true, default-features = false }

# Substrate/SCALE deps.
codec = { workspace = true, default-features = false, features = ["derive"] }

polkavm-derive = "0.32.0"
picoalloc = "5.2.0"

[features]
default = []
