[package]
name = "wasi-test-sandboxed"
version = "0.0.1"
edition = "2021"

[patch.crates-io]
# Curve tree dependencies
#bulletproofs = { path = "../curve-trees/bulletproofs" }
#curve_tree_relations = { package = "relations", path = "../curve-trees/relations" }
# If want to pull code for curve-trees from git, comment above 2 relations and uncomment below 2
bulletproofs = { git = "https://github.com/PolymeshAssociation/curve-trees", branch = "polymesh" }
curve_tree_relations = { package = "relations", git = "https://github.com/PolymeshAssociation/curve-trees", branch = "polymesh" }

#dock_crypto_utils = { path = "../crypto/utils" }
#schnorr_pok = { path = "../crypto/schnorr_pok" }
dock_crypto_utils = { git = "https://github.com/PolymeshAssociation/crypto" }
schnorr_pok = { git = "https://github.com/PolymeshAssociation/crypto" }

# Polymesh changes.
#ark-serialize = { path = "../arkworks-algebra/serialize" }
#ark-ec = { path = "../arkworks-algebra/ec" }
#ark-ff = { path = "../arkworks-algebra/ff" }
ark-serialize = { git = "https://github.com/PolymeshAssociation/arkworks-algebra.git", branch = "polymesh-v0.4" }
ark-ec = { git = "https://github.com/PolymeshAssociation/arkworks-algebra.git", branch = "polymesh-v0.4" }
ark-ff = { git = "https://github.com/PolymeshAssociation/arkworks-algebra.git", branch = "polymesh-v0.4" }

[workspace]
members = []

[features]
default = ["sandbox", "std"]

sandbox = ["wasmtime", "wasmtime-wasi", "wasi-common", "log"]

std = ["polymesh-dart/std"]

[[bin]]
name = "wasi-module"

[dependencies]
anyhow = "1.0"

wasmtime = { version = "6.0", features = ["component-model"], optional = true }
wasmtime-wasi = { version = "6.0", optional = true }
wasi-common = { version = "6.0", default-features = false, optional = true }
log = { version = "0.4", optional = true }

codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }

polymesh-dart = { path = "..", default-features = false, features = [
	"backend_bp",
] }

[profile.wasm32-wasi]
inherits = "release"
strip = "symbols"
lto = true
