[package]
name = "dart-bp-docs"
version = "0.1.0"
edition = "2021"
authors = ["Polymesh Association"]
description = "Mathematical documentation for DART-BP (Bulletproofs) implementation"
repository = "https://github.com/PolymeshAssociation/polymesh-dart"
license = "GPL-3.0"
keywords = ["cryptography", "zero-knowledge", "bulletproofs", "documentation"]
categories = ["cryptography", "documentation"]

[lib]
path = "lib.rs"

[package.metadata.docs.rs]
# Enable KaTeX for math rendering
rustdoc-args = ["--html-in-header", "katex-header.html"]

# No dependencies needed - this is documentation only
[dependencies]
